--- a/app/src/main/res/layout/chat_recived_view.xml
+++ b/app/src/main/res/layout/chat_recived_view.xml
@@ -42,7 +42,8 @@
             android:layout_below="@+id/txtSender"
             android:layout_alignParentLeft="true"
             android:padding="12dp"
-            android:background="@drawable/abc_ab_share_pack_holo_light">
+            android:background="@drawable/abc_ab_share_pack_holo_light"
+            android:layout_marginRight="17dp">
 
             <TextView
                 android:id="@+id/txtMessage"
