--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.kebrit.instantmessagingikiu.LogInActivity">
+    tools:context="com.example.kebrit.instantmessagingikiu.activity.LogInActivity">
 
     <EditText
         android:layout_width="wrap_content"
